--- a/embarcados.ipynb
+++ b/embarcados.ipynb
@@ -6,10 +6,11 @@
         "id": "Qgdljyh15D8c"
       },
       "source": [
-        "*texto em itálico*## Template Notebooks\n",
-        "### <img src=\"https://github.com/sergio-UFS/sergio-UFS/assets/122404101/6fb58fd4-8f8f-4306-9aaa-ed6f31a87202\" alt=\"drawing\" width=\"30\"/> LADATA\n",
+        "<p>\n",
+        "    <img src=https://github.com/ladata-ufs/IX-SEMAC/blob/main/id%20visual/logotipo-extenso-fundo-cinza.png?raw=true alt=ladata width=400/>\n",
+        "</p>\n",
         "\n",
-        "> **Projeto**:  Dos sensores à ciência de dados.\n",
+        "# **Ciência de Dados para Sistemas Embarcados: Dos Sensores análises**\n",
         "\n",
         "\n",
         "#### **Objetivos**: Este projeto, visa explicitar como a Ciência de Dados pode estar diretamente ligada ao uso de Sistemas Embarcados. Para isso foram utilizados os seguintes materiais para a realização do mesmo:\n",
@@ -93,38 +94,10 @@
         "import time"
       ],
       "metadata": {
-        "id": "l3sT37rVIl4x",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 379
-        },
-        "outputId": "efe5d33e-0209-42ac-e259-7f21c82a4b71"
+        "id": "l3sT37rVIl4x"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'serial'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-34a713124a32>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Importação das bibliotecas utilizadas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mserial\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mard\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'serial'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -134,7 +107,7 @@
       "source": [
         "#### ⛽ **Definindo funções:**\n",
         "\n",
-        "Definição de funções que serão utilizadas para ler os dados e esperar mais adição de água no recipiente"
+        "Definição de funções que serão utilizadas para ler os dados"
       ]
     },
     {
@@ -179,27 +152,10 @@
         "lista_umidade = []"
       ],
       "metadata": {
-        "id": "-NNZiJoNKlGS",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
-        },
-        "outputId": "b4b98685-df61-4525-fd82-82dd456e76ab"
+        "id": "-NNZiJoNKlGS"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'ard' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-423e62a387af>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Conecta ao serial pela porta utilizada pelo arduino\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0marduino\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSerial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'COM9'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9600\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Alterar para o relativo ao seu computador\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcontador\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;31m# contador para controlar o número de leituras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mMAX_VALUE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m \u001b[0;31m# número máximo de leituras dos dados\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'ard' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -266,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "H5mK78Pg5D8e"
       },
@@ -284,14 +240,14 @@
         "id": "dTT-0IL-5D8e"
       },
       "source": [
-        "### 🛠 Tratamento\n",
+        "### 🛠 **Tratamento**\n",
         "\n",
         "Responsável pela parte da importação, limpeza e geração de objetos de análise."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "CDWiwDq15D8f"
       },
@@ -307,7 +263,7 @@
         "id": "8bX4gpH35D8f"
       },
       "source": [
-        "### 🤔 Análise e Metodologia\n",
+        "### 🤔 **Análise e Metodologia**\n",
         "\n",
         "Análise dos dados limpos para a análise com o objetivo de entender melhor como estava o ambiente de teste\n",
         "\n",
@@ -316,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "5G5-HlHY5D8f"
       },
@@ -343,7 +299,7 @@
         "id": "wMJP0EbD5D8g"
       },
       "source": [
-        "### 📈 Resultados\n",
+        "### 📈 **Resultados**\n",
         "\n",
         "Obtendo os dados, podemos ver como ficou a evolução da temperatura e da umidade em relação ao tempo e também ver como esses dados se repetem"
       ]
@@ -382,7 +338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +371,7 @@
           "height": 449
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -444,7 +400,7 @@
           "height": 449
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -460,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "VM90CST65D8g",
         "colab": {
@@ -501,7 +457,7 @@
           "height": 449
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -521,7 +477,7 @@
         "id": "XIGJiri_5D8g"
       },
       "source": [
-        "### 💡 Conclusões\n",
+        "### 💡 **Conclusões**\n",
         "\n",
         "A partir da pesquisa e do desenvolvimento do código acima, o objetivo de monitorar um ambiente controlado foi alcançado."
       ]
@@ -532,16 +488,17 @@
         "id": "hD0nEUeA5D8h"
       },
       "source": [
-        "### 📖 Referências:\n",
+        "### 📖 **Referências**\n",
         "\n",
         "\n",
         "\n",
-        "### Equipe:\n",
+        "### **Equipe**\n",
         "\n",
         "1. [Cauan Machado](https://github.com/cteimachDCOMP)\n",
         "2. [Gustavo Caldas](https://github.com/Gugu-debug)\n",
         "3. [Lucas Feitosa](https://github.com/LucasFe3152)\n",
-        "4. [Michael Santos](https://github.com/ievykiw)"
+        "4. [Michael Santos](https://github.com/ievykiw)\n",
+        "5. [Túlio Gois](https://github.com/tuliosg)"
       ]
     }
   ],
